--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,11 @@
   
   </profile>
   </profiles>
-  
+
+    <properties>
+        <maven.compiler.source>1.6</maven.compiler.source>
+        <maven.compiler.target>1.6</maven.compiler.target>
+    </properties>
    
   <dependencies>
   
